<resources>
    <string name="app_name">Nimble</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="background_image">background image</string>
    <string name="overlay">overlay</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="demo">Demo</string>
    <string name="start_survey">Start Survey</string>
    <string name="submit">Submit</string>
</resources>